--- a/mean/client/fakeid/src/app/pages/edit-user/edit-user.component.html
+++ b/mean/client/fakeid/src/app/pages/edit-user/edit-user.component.html
@@ -1,7 +1,7 @@
-<div>
+<div class="pageTitle">
   <h1> {{user?.name}} </h1>
   <h3>{{user?.CVR ? "Employee profile" : null}}</h3>
-  <h4 (click)="goBack()">Go back</h4>
+  <!-- <h4 (click)="goBack()">Go back</h4> -->
 </div>
 
  <div class="editContainer" *ngIf="!showEditContent">
@@ -32,9 +32,7 @@
           <mat-select
             matNativeControl
             formControlName="spouseId"
-            class="form-control"
-        
-        
+            class="form-control"     
           >
             <mat-option
               *ngFor="let spouse of spouses"
@@ -68,22 +66,19 @@
     </div> 
    
 <div *ngIf="!user.isChild">
-  <mat-form-field class="formItem" appearance="fill">
+  <mat-form-field class="formItem">
     <strong> Children </strong>
     <div>
       <mat-select
         matNativeControl
         formControlName="childId"
-        class="form-control"
-      >
-        <mat-option
-          *ngFor="let child of children"
-        
-          [value]="child._id"
-        >
+        class="form-control">
+
+        <mat-option *ngFor="let child of children"        
+          [value]="child._id">
           {{ child.name }}
-      
         </mat-option>
+
       </mat-select>
     </div>
   </mat-form-field>
@@ -95,16 +90,14 @@
       </mat-form-field>
     </div>
   </div> 
-    <mat-form-field class="formItem" appearance="fill">
+    <mat-form-field class="formItem" >
       <strong> Address </strong>
       <div>
         <mat-select
           matNativeControl
           formControlName="address"
-          class="form-control"
-        >
-          <mat-option
-         
+          class="form-control">
+          <mat-option       
           [value]=
           "'Lygten 17, 2400 Norrebro'"
           >
@@ -124,8 +117,8 @@
  
 
    <div class="btncontainer">
-      <button class="btn-secondary" type="submit">Save</button>
-      <button class="btn-secondary" type="button" (click)="ShowHideEdit()">
+      <button mat-raised-button class="btn-secondary" type="submit">Save</button>
+      <button mat-raised-button class="btn-secondary" type="button" (click)="ShowHideEdit()">
         Cancel
       </button>
     </div>
@@ -134,7 +127,11 @@
 
 
 <form class="viewContainer" *ngIf="showEditContent">
-  <mat-form-field class="formItem" appearance="fill">
+  <button mat-raised-button (click)="ShowHideEdit()">
+    EDIT
+  </button>
+  
+  <mat-form-field class="formItem">
     <mat-label>Name</mat-label>
     <input matInput [value]="user?.name" [readonly]="true" />
   </mat-form-field>
@@ -187,7 +184,7 @@
     <h3>Children</h3>
     <div class="tableTop">
       <span>NAME</span> <span>GENDER</span><span>AGE</span>
-      <span>OTHER PARENT</span>
+      <!-- <span>OTHER PARENT</span> -->
     </div>
 
     <div *ngFor="let child of user?.children" class="shortTableGrid">
@@ -202,9 +199,7 @@
     </div>
   </div> 
 
-  <div class="btncontainer">
-    <button class="btn-secondary" disabeled (click)="ShowHideEdit()">
-      EDIT
-    </button>
-  </div>
+  <!-- <div class="btncontainer">
+ 
+  </div> -->
 </form>
