--- a/mean/client/fakeid/src/styles.scss
+++ b/mean/client/fakeid/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+// html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
@@ -11,13 +11,18 @@ $linkButtonColor: #255b91;
 box-sizing: border-box;
 }
 
+form{
+    max-width: 500px;
+    width: 100%;
+    margin:auto;
+}
 
-// button{
-//     border-radius: 10px;
-//     border:none;
-//     outline:none;
-//     margin:auto;
-//     background:rgb(59, 122, 182);
-//     color:white;
-//     padding:1rem 2rem;
-// }
+
+.pageTitle{
+    margin: 1rem 4rem;
+    padding-bottom: 0;
+    h4{
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
