--- a/mern/client/fakeid/src/App.css
+++ b/mern/client/fakeid/src/App.css
@@ -27,6 +27,8 @@ a.active{
 
 button, .button, .labelRadio label{
   border-radius: 10px;
+  font-size: .95rem;
+  line-height: 20px;
   padding:.5rem 2rem;
   color:white;
   text-decoration: none;
