info in mean and text in all stacks

--- a/mean/client/fakeid/src/app/components/menu/menu.component.html
+++ b/mean/client/fakeid/src/app/components/menu/menu.component.html
@@ -13,5 +13,9 @@
         [routerLinkActiveOptions]="{ exact: true }">
             Create
         </a>
+        <button mat-button
+        matTooltip="This application is made in the MEAN stack.">
+        i
+        </button>
     </div>
 </nav>
