--- a/mean/client/fakeid/src/app/pages/overview/overview.component.scss
+++ b/mean/client/fakeid/src/app/pages/overview/overview.component.scss
@@ -75,3 +75,7 @@
 .mat-expansion-panel:not([class*=mat-elevation-z]){
     box-shadow: none !important;
 }
+.mat-expansion-panel .mat-expansion-panel-header.cdk-keyboard-focused:not([aria-disabled=true]), .mat-expansion-panel .mat-expansion-panel-header.cdk-program-focused:not([aria-disabled=true]), .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:hover:not([aria-disabled=true]){
+    background: none !important;
+    font-weight: bold;
+}
