--- a/mean/client/fakeid/src/app/pages/edit-user/edit-user.component.html
+++ b/mean/client/fakeid/src/app/pages/edit-user/edit-user.component.html
@@ -30,7 +30,7 @@
         <mat-select
           matNativeControl
           formControlName="maritalStatusId"
-          class="form-control"
+          class="form-control formItem"
         >
           <mat-option
             *ngFor="let status of maritalStatuses"
