--- a/mean/client/fakeid/src/styles.scss
+++ b/mean/client/fakeid/src/styles.scss
@@ -1,28 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
 
 // html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 
 $actionButtonColor: #258191;
 $linkButtonColor: #255b91;
 
-*{
-box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-form{
-    max-width: 500px;
-    width: 100%;
-    margin:auto;
+form {
+  max-width: 500px;
+  width: 100%;
+  margin: auto;
 }
 
-
-.pageTitle{
-    margin: 1rem 4rem;
-    padding-bottom: 0;
-    h4{
-      text-decoration: underline;
-      cursor: pointer;
-    }
+.pageTitle {
+  margin: 1rem 4rem;
+  padding-bottom: 0;
+  h4 {
+    text-decoration: underline;
+    cursor: pointer;
   }
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+  background-color: rgba(255, 255, 255, 0) !important;
+}
