child has less than tqo parents mongo

--- a/mean/client/fakeid/src/styles.scss
+++ b/mean/client/fakeid/src/styles.scss
@@ -11,13 +11,7 @@ $linkButtonColor: #255b91;
 box-sizing: border-box;
 }
 
+mat-dialog-containe.ng-tns-c67-14.ng-trigger.ng-trigger-dialogContainer.ng-star-inserted{
+    width: 500px !important;
+}
 
-// button{
-//     border-radius: 10px;
-//     border:none;
-//     outline:none;
-//     margin:auto;
-//     background:rgb(59, 122, 182);
-//     color:white;
-//     padding:1rem 2rem;
-// }
