--- a/mean/client/fakeid/src/app/pages/edit-user/edit-user.component.scss
+++ b/mean/client/fakeid/src/app/pages/edit-user/edit-user.component.scss
@@ -115,3 +115,11 @@ a {
   text-decoration: none;
   color: black;
 }
+
+.nameTitle {
+  text-align: center;
+}
+
+.pointer {
+  cursor: pointer;
+}
