--- a/mean/client/fakeid/src/app/pages/overview/overview.component.html
+++ b/mean/client/fakeid/src/app/pages/overview/overview.component.html
@@ -65,7 +65,7 @@
                     </mat-button-toggle-group>
                   </div>
                   <div class="">
-                    <h3>Employee Status</h3>
+                    <h3>Professional Status</h3>
                     <mat-button-toggle-group
                       name="isCompany"
                       aria-label="isCompany"
