--- a/mean/client/fakeid/src/app/pages/overview/overview.component.html
+++ b/mean/client/fakeid/src/app/pages/overview/overview.component.html
@@ -114,7 +114,7 @@
         <p>{{user.maritalStatus}}</p>
         
         <a mat-raised-button color="primary" routerLink="/edit/{{ user._id}}">Edit</a>
-        <a mat-raised-button color="primary">Login</a>
+        <a mat-raised-button color="primary" href="http://localhost:80/fakeid/testpage/user.html?mean={{user._id}}">Login</a>
     </div>
 
 </div>
