testpage integration test and error style

--- a/testpage/style.css
+++ b/testpage/style.css
@@ -1,14 +1,30 @@
 
 html, body{
     height:100%;
+    margin:0;
 }
-body{
+.testpage{
     display:grid;
     margin:0 5rem;
     grid-gap: 1rem;
     align-content: center;
     align-items: center;
     justify-content: center;
+}
+.error{
+    position:absolute;
+    top:0;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    height:100%;
+    overflow: hidden;
+    background:white;
+    text-align: center;
+    display: grid;
+    align-items: center;
+    margin:0;
 }
 a{
     text-decoration: none;
