--- a/mean/client/fakeid/src/app/pages/edit-user/edit-user.component.html
+++ b/mean/client/fakeid/src/app/pages/edit-user/edit-user.component.html
@@ -24,26 +24,8 @@
       <strong class="titleStrong"> Date of birth </strong>
       <input matInput [readonly]="true" [value]="user?.formattedDate" />
     </mat-form-field>
-    <mat-form-field class="formItem" appearance="fill" *ngIf="!user?.CVR">
-      <strong> Marital Status </strong>
-      <div>
-        <mat-select
-          matNativeControl
-          formControlName="maritalStatusId"
-          class="form-control formItem"
-        >
-          <mat-option
-            *ngFor="let status of maritalStatuses"
-          
-            [value]="status.statusId"
-          >
-            {{ status.status }}
-        
-          </mat-option>
-        </mat-select>
-      </div>
-    </mat-form-field>
-    <div *ngIf="!user?.CVR">
+  
+    <div *ngIf="!user?.CVR && !user?.isChild">
     <div *ngIf="!user.spouse">
       <mat-form-field class="formItem" appearance="fill">
         <strong> Spouse </strong>
